# Ciphramework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  diagrams.drawio
src/ciphers/: feisty.configurable_round_key.c  feisty.no_round_key.c  xor.c
src/ciphramework/: base_objects.c  cipher_driver.c  cplib_mem.c  cplib_utils.c
src/ciphramework/include/: ciphrameworklib.h  cplib_log.h  cplib_mem.h  cplib_utils.h
src/ciphrameworklib/: base_objects.c  cipher_driver.c  cplib_helper_implementations.c  cplib_mem.c  cplib_utils.c  log.c  mem_chunk.c
src/ciphrameworklib/include/: ciphrameworklib.h  cplib_helper_implementations.h  cplib_log.h  cplib_mem.h  cplib_utils.h  log.h  mem_chunk.h
src/example/: kcipher.c  kcrypt_utils.c  main.c  xor_cipher.c
src/example/ciphers/: feisty.c  xor.c  xor_cipher.c
src/example/include/: kcrypt.h  kcrypt_utils.h
src/example/modes/: ECB.c
src/example/test/: Makefile  test.sh
src/example/test/key/: binary-32b-16383.txt
src/example/test/plaintext/: binary-32b-4194303.txt  text-len=21.txt  text-len=38.txt  text-len=45.txt  text-len=49.txt
src/kcrypt/: kcrypt_utils.c  main.c
src/kcrypt/include/: kcrypt.h
src/kcrypt/test/: Makefile  test.sh
src/kcrypt/test/iv/: binary-32b-2314643986.txt  binary-64b-16891392968528426633.txt
src/kcrypt/test/plaintext/: binary-32b-8191.txt  text-len=28.txt  text-len=29.txt  text-len=35.txt  text-len=37.txt  text-len=48.txt
src/modes/: CBC.c  CTR.c  ECB.c
src/sample_implementation/: kcipher.c  main.c  xor_cipher.c
src/sample_implementation/include/: kcipher.h  kcrypt.h  xor_cipher.h
src/sample_implementation/test/: Makefile  build_exe.sh  test.sh
src/sample_implementation/test/plaintext/: binary-32b-2047.txt  binary-32b-2097151.txt  text-len=23.txt  text-len=25.txt  text-len=27.txt  text-len=36.txt  text-len=39.txt  text-len=41.txt  text-len=42.txt  text-len=43.txt  text-len=44.txt  text-len=46.txt  text-len=47.txt
